--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "canvas-2d-drawing",
   "version": "1.0.0",
   "description": "Biblioteca para criação de desenhos em forma de linha em seu browser",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
